tests/snapshots/examples_fixtures/primop__numeric.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/primop/numeric.flx
== compile ==
failed (compile)
== diagnostics ==
error[E406]: Unhandled Root Effect

`fn main` has undischarged effects: Div.

  examples/primop/numeric.flx:17:1
   |
17 | fn main() with IO, Div {
   | ^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------- undischarged effects at root boundary

Hint:
  Handle these effects explicitly with `... handle Effect { ... }` before returning from `main`.
== stdout ==
<not executed>
